--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr>
     <h2>Some business ideas</h2>
     <ul>
-      <li>SaaS is smthn im into although i dont know much abt it OTL </li>
+      <li>SaaS is smthn im somewhat interested in although i dont know much abt it lol OTL </li>
       <li>I'd like to start an arab-centric fashion brand similar to <a href="https://www.instagram.com/jeeldesign/">this</a>,
         <a href="https://www.instagram.com/dar.collective/">this</a>, and <a href="https://www.instagram.com/palestineinabox/">this</a></li>
       <li>Localised versions of companies, e.g: <i>Weibo is China's localised version of Twitter</i></li>
